# ane-gpu

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  README.md  RESEARCH.md  TASKS.md  config.example.yaml  conftest.py  pyproject.toml
.claude/: settings.local.json
benchmarks/: baseline_mlx.py
scripts/: check_tokenizers.py
src/: __init__.py  cli.py
src/draft/: convert.py  engine.py
src/orchestrator/: sampling.py  scheduler.py
src/utils/: config.py  memory.py
tests/: test_config.py  test_draft_engine.py  test_memory.py  test_sampling.py  test_scheduler.py  test_target_engine.py
